[gd_scene load_steps=6 format=3 uid="uid://dgqswf2bltx52"]

[ext_resource type="Script" path="res://ScriptsAndSprites/Scripts/Collectables/UploadDataPoint/upload_data_point.gd" id="1_a6834"]
[ext_resource type="Texture2D" uid="uid://gkdohmk0utb1" path="res://ScriptsAndSprites/Sprites/Collectables/UploadDataPoint/upload_data_point.png" id="1_seohr"]
[ext_resource type="Texture2D" uid="uid://cnjoq4ol71lk" path="res://ScriptsAndSprites/Sprites/UI/ProgressBar/ProgressBar.png" id="3_shr26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wfdj"]
size = Vector2(8, 8)

[sub_resource type="Curve" id="Curve_30a3h"]
_data = [Vector2(0, 0.99214), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="UploadDataPoint" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_a6834")

[node name="ExistanceTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_seohr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4wfdj")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 32
lifetime = 1.5
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 70.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_30a3h")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
max_value = 3.0
step = 0.1
allow_greater = true
fill_mode = 4
texture_progress = ExtResource("3_shr26")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ExistanceTimer" to="." method="_on_existance_timer_timeout"]
